# lidarr-api

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
examples/: search_artist.py
lidarr_api/: __init__.py  bulk_artist_manager.py  cli.py  client.py  config.py  data_utils.py  library_manager.py  monitoring.py  system_maintenance.py
scripts/: README.md  __init__.py  bulk_artist_manager.py  data_utils.py  library_manager.py  monitoring.py  system_maintenance.py
tests/: __init__.py  config.py  config.py.example  test_cli.py  test_client.py  test_data_utils.py  test_library_manager.py  test_monitoring.py  test_system_maintenance.py
