[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lidarr-api"
version = "0.1.0"
description = "A Python library for interacting with the Lidarr API"
authors = ["JD Runyan <jason@runyan.net>"]
readme = "README.md"
homepage = "https://github.com/SvetaKrava/lidarr-api"
repository = "https://github.com/SvetaKrava/lidarr-api"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "lidarr_api"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
urllib3 = "~2.5.0"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.15.0"
responses = "^0.25.0"

[tool.poetry.scripts]
lidarr-search = "lidarr_api.cli:cli_main"

[tool.pylint]
max-line-length = 100

[tool.flake8]
max-line-length = 100
